sandbox/output
OneHundredDoors.java:5: error: cannot find symbol
        List<String> doors = new ArrayList<String>(amountOfDoorsPassed);
        ^
  symbol:   class List
  location: class OneHundredDoors
OneHundredDoors.java:5: error: cannot find symbol
        List<String> doors = new ArrayList<String>(amountOfDoorsPassed);
                                 ^
  symbol:   class ArrayList
  location: class OneHundredDoors
2 errors
